--- a/src/app/calendar-room/calendar-room.component.scss
+++ b/src/app/calendar-room/calendar-room.component.scss
@@ -1,6 +1,6 @@
-$hover-color: '##BFCCB7';
-$active-color: '#A0B394';
-$light-color: '#fcfcfc';
+$hover-color: "##BFCCB7";
+$active-color: "#A0B394";
+$light-color: "#fcfcfc";
 
 .calendar-room-cal-header {
   display: flex;
@@ -36,9 +36,9 @@ $light-color: '#fcfcfc';
   // margin: 12.8px;
   // background-image: linear-gradient(90deg, #C8D6C2 0%, #33710B 100%);
   // border-radius: 8px;
-  margin-left:1.5em;
-  display:flex;
-  flex-direction:row;
+  margin-left: 1.5em;
+  display: flex;
+  flex-direction: row;
 }
 .calendar-room-title {
   font-size: xx-large;
@@ -69,7 +69,7 @@ $light-color: '#fcfcfc';
   border-radius: 25px;
   overflow: hidden;
   margin: 0px 20px 20px 20px;
-  box-shadow: 2px 7px 16px -1px rgba(212,212,212,1);
+  box-shadow: 2px 7px 16px -1px rgba(212, 212, 212, 1);
 }
 .expansion-panel {
   background-color: #fcfcfc;
@@ -91,20 +91,20 @@ $light-color: '#fcfcfc';
 .sidebar-button {
   width: 80%;
   height: 3.5em;
-  display:flex;
-  align-items:center;
-  margin-top:6.3em;
+  display: flex;
+  align-items: center;
+  margin-top: 6.3em;
 }
 .sidebar-button-elements {
   display: flex;
   align-items: center;
-  margin-left:1em;
+  margin-left: 1em;
 }
 .sidebar-button-name {
   font-weight: 600;
   font-size: medium;
   text-transform: uppercase;
-  padding-left:1em;
+  padding-left: 1em;
 }
 .sidebar-button-wrapper {
   display: flex;
@@ -147,4 +147,7 @@ $light-color: '#fcfcfc';
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.fill-space {
+  flex: 1 1 auto;
 }
