--- a/src/app/calendar-room/calendar-room.component.html
+++ b/src/app/calendar-room/calendar-room.component.html
@@ -35,27 +35,28 @@
       <img class="logo-img" [src]="'assets/thyme-logo.png'" />
     </a>
 
-    <div class="calendar-room-title-container">
-      <div class="calendar-room-title-wrapper">
-        <ng-container *ngIf="roomMemDoc.room as room">
-          <div class="calendar-room-title">
-            {{ room.title }}
-          </div>
-        </ng-container>
-        <ng-container *ngIf="roomMemDoc.member as member">
-          <button mat-icon-button (click)="toggleFavorite(member.favorite)">
-            <mat-icon class="favorite-button" *ngIf="member.favorite">
-              star
-            </mat-icon>
-            <mat-icon class="favorite-button" *ngIf="!member.favorite">
-              star_border
-            </mat-icon>
-          </button>
-        </ng-container>
-      </div>
-    </div>
+    <ng-container *ngIf="roomMemDoc.room as room">
+      <h1 class="calendar-room-title">
+        {{ room.title }}
+      </h1>
+    </ng-container>
+    <ng-container *ngIf="roomMemDoc.member as member">
+      <button mat-icon-button (click)="toggleFavorite(member.favorite)">
+        <mat-icon class="favorite-button" *ngIf="member.favorite">
+          star
+        </mat-icon>
+        <mat-icon class="favorite-button" *ngIf="!member.favorite">
+          star_border
+        </mat-icon>
+      </button>
+    </ng-container>
 
-    <button mat-raised-button mwlCalendarToday [(viewDate)]="viewDate">
+    <button
+      mat-raised-button
+      mwlCalendarToday
+      [(viewDate)]="viewDate"
+      class="today-button"
+    >
       Today
     </button>
     <div class="navigation-buttons">
@@ -83,38 +84,32 @@
     </h3>
 
     <span class="fill-space"></span>
-    <mat-button-toggle-group
-      class="calendar-room-cal-view-but-group"
-      value="Week"
-      appearance="legacy"
-    >
-      <mat-button-toggle
-        (click)="setView(CalendarView.Month)"
-        [class.active]="view === CalendarView.Month"
-        value="Month"
-      >
-        Month
-      </mat-button-toggle>
-      <mat-button-toggle
-        (click)="setView(CalendarView.Week)"
-        [class.active]="view === CalendarView.Week"
-        value="Week"
-      >
-        Week
-      </mat-button-toggle>
-      <mat-button-toggle
-        (click)="setView(CalendarView.Day)"
-        [class.active]="view === CalendarView.Day"
-        value="Day"
-      >
-        Day
-      </mat-button-toggle>
-    </mat-button-toggle-group>
-    <button mat-icon-button (click)="openSettingsDialog()">
+
+    <button mat-icon-button (click)="openSettingsDialog()" class="settings-button">
       <mat-icon> settings </mat-icon>
     </button>
+
+    <button
+      mat-raised-button
+      [matMenuTriggerFor]="menu"
+      class="calendar-view-button"
+    >
+      {{ view | titlecase }}
+      <mat-icon>expand_more</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item (click)="setView(CalendarView.Month)">
+        <span>Month</span>
+      </button>
+      <button mat-menu-item (click)="setView(CalendarView.Week)">
+        <span>Week</span>
+      </button>
+      <button mat-menu-item (click)="setView(CalendarView.Day)">
+        <span>Day</span>
+      </button>
+    </mat-menu>
   </app-toolbar>
-  <mat-sidenav-container>
+  <mat-sidenav-container class="calendar-room-container-parent">
     <mat-sidenav mode="side" position="start" opened>
       <button
         type="button"
@@ -293,121 +288,118 @@
 
         <mat-sidenav-content>
           <!-- This block represents the header for the calendar and the calendar grid together -->
-          <div class="calendar-wrapper">
-            <!-- Template to get rid of 12 am in the time label column -->
-            <ng-template
-              #customTimeLabelTemplate
-              let-segment="segment"
-              let-locale="locale"
-              let-segmentHeight="segmentHeight"
-              let-isTimeLabel="isTimeLabel"
+          <!-- Template to get rid of 12 am in the time label column -->
+          <ng-template
+            #customTimeLabelTemplate
+            let-segment="segment"
+            let-locale="locale"
+            let-segmentHeight="segmentHeight"
+            let-isTimeLabel="isTimeLabel"
+          >
+            <div
+              #segmentElement
+              class="cal-hour-segment"
+              [style.height.px]="segmentHeight"
+              [class.cal-hour-start]="segment.isStart"
+              [class.cal-after-hour-start]="!segment.isStart"
+              [ngClass]="segment.cssClass"
+              (mousedown)="startDragToCreate(segment, $event, segmentElement)"
             >
-              <div
-                #segmentElement
-                class="cal-hour-segment"
-                [style.height.px]="segmentHeight"
-                [class.cal-hour-start]="segment.isStart"
-                [class.cal-after-hour-start]="!segment.isStart"
-                [ngClass]="segment.cssClass"
-                (mousedown)="startDragToCreate(segment, $event, segmentElement)"
-              >
-                <div class="calculations" *ngIf="isTimeLabel">
-                  <div
-                    *ngIf="
-                      segment.date
-                        | calendarDate: 'weekViewHour':locale as result
-                    "
-                  >
-                    <div class="cal-time" *ngIf="result != '12 AM'">
-                      {{ result }}
-                    </div>
+              <div class="calculations" *ngIf="isTimeLabel">
+                <div
+                  *ngIf="
+                    segment.date | calendarDate: 'weekViewHour':locale as result
+                  "
+                >
+                  <div class="cal-time" *ngIf="result != '12 AM'">
+                    {{ result }}
                   </div>
                 </div>
               </div>
-            </ng-template>
-
-            <!-- Template to Get rid of the weekends -->
-            <ng-template
-              #customTemplate
-              let-days="days"
-              let-locale="locale"
-              let-dayHeaderClicked="dayHeaderClicked"
-              let-eventDropped="eventDropped"
-              let-trackByWeekDayHeaderDate="trackByWeekDayHeaderDate"
-              let-dragEnter="dragEnter"
-            >
-              <div class="cal-day-headers" role="row">
-                <div class="time-label-column">
-                  <mat-icon> access_time </mat-icon>
-                  <span> {{ timezone }}</span>
-                </div>
-                <div
-                  class="cal-header"
-                  *ngFor="let day of days; trackBy: trackByWeekDayHeaderDate"
-                  [class.cal-past]="day.isPast"
-                  [class.cal-today]="day.isToday"
-                  [class.cal-future]="day.isFuture"
-                  [ngClass]="day.cssClass"
-                  (mwlClick)="
-                    dayHeaderClicked.emit({ day: day, sourceEvent: $event })
-                  "
-                  mwlDroppable
-                  dragOverClass="cal-drag-over"
-                  (drop)="
-                    eventDropped.emit({
-                      event: $event.dropData.event,
-                      newStart: day.date
-                    })
-                  "
-                  (dragEnter)="dragEnter.emit({ date: day.date })"
-                  tabindex="0"
-                  role="columnheader"
-                >
-                  <b>{{
-                    day.date | calendarDate: "weekViewColumnHeader":locale
-                  }}</b
-                  ><br />
-                  <span>{{
-                    day.date | calendarDate: "weekViewColumnSubHeader":locale
-                  }}</span>
-                </div>
-              </div>
-            </ng-template>
-
-            <div [ngSwitch]="view">
-              <mwl-calendar-month-view
-                *ngSwitchCase="CalendarView.Month"
-                [viewDate]="viewDate"
-                [events]="events"
-                [refresh]="refresh"
-                [activeDayIsOpen]="activeDayIsOpen"
-                (dayClicked)="dayClicked($event.day)"
-                (eventClicked)="handleEvent('Clicked', $event.event)"
-                (eventTimesChanged)="eventTimesChanged($event)"
-              >
-              </mwl-calendar-month-view>
-              <mwl-calendar-week-view
-                *ngSwitchCase="CalendarView.Week"
-                [viewDate]="viewDate"
-                [events]="events"
-                [refresh]="refresh"
-                [hourSegmentTemplate]="customTimeLabelTemplate"
-                [headerTemplate]="customTemplate"
-                (eventClicked)="handleEvent('Clicked', $event.event)"
-                (eventTimesChanged)="eventTimesChanged($event)"
-              >
-              </mwl-calendar-week-view>
-              <mwl-calendar-day-view
-                *ngSwitchCase="CalendarView.Day"
-                [viewDate]="viewDate"
-                [events]="events"
-                [refresh]="refresh"
-                [hourSegmentTemplate]="customTimeLabelTemplate"
-                (eventClicked)="handleEvent('Clicked', $event.event)"
-                (eventTimesChanged)="eventTimesChanged($event)"
-              >
-              </mwl-calendar-day-view>
             </div>
+          </ng-template>
+
+          <!-- Template to Get rid of the weekends -->
+          <ng-template
+            #customTemplate
+            let-days="days"
+            let-locale="locale"
+            let-dayHeaderClicked="dayHeaderClicked"
+            let-eventDropped="eventDropped"
+            let-trackByWeekDayHeaderDate="trackByWeekDayHeaderDate"
+            let-dragEnter="dragEnter"
+          >
+            <div class="cal-day-headers" role="row">
+              <div class="time-label-column">
+                <mat-icon> access_time </mat-icon>
+                <span> {{ timezone }}</span>
+              </div>
+              <div
+                class="cal-header"
+                *ngFor="let day of days; trackBy: trackByWeekDayHeaderDate"
+                [class.cal-past]="day.isPast"
+                [class.cal-today]="day.isToday"
+                [class.cal-future]="day.isFuture"
+                [ngClass]="day.cssClass"
+                (mwlClick)="
+                  dayHeaderClicked.emit({ day: day, sourceEvent: $event })
+                "
+                mwlDroppable
+                dragOverClass="cal-drag-over"
+                (drop)="
+                  eventDropped.emit({
+                    event: $event.dropData.event,
+                    newStart: day.date
+                  })
+                "
+                (dragEnter)="dragEnter.emit({ date: day.date })"
+                tabindex="0"
+                role="columnheader"
+              >
+                <b>{{
+                  day.date | calendarDate: "weekViewColumnHeader":locale
+                }}</b
+                ><br />
+                <span>{{
+                  day.date | calendarDate: "weekViewColumnSubHeader":locale
+                }}</span>
+              </div>
+            </div>
+          </ng-template>
+
+          <div [ngSwitch]="view">
+            <mwl-calendar-month-view
+              *ngSwitchCase="CalendarView.Month"
+              [viewDate]="viewDate"
+              [events]="events"
+              [refresh]="refresh"
+              [activeDayIsOpen]="activeDayIsOpen"
+              (dayClicked)="dayClicked($event.day)"
+              (eventClicked)="handleEvent('Clicked', $event.event)"
+              (eventTimesChanged)="eventTimesChanged($event)"
+            >
+            </mwl-calendar-month-view>
+            <mwl-calendar-week-view
+              *ngSwitchCase="CalendarView.Week"
+              [viewDate]="viewDate"
+              [events]="events"
+              [refresh]="refresh"
+              [hourSegmentTemplate]="customTimeLabelTemplate"
+              [headerTemplate]="customTemplate"
+              (eventClicked)="handleEvent('Clicked', $event.event)"
+              (eventTimesChanged)="eventTimesChanged($event)"
+            >
+            </mwl-calendar-week-view>
+            <mwl-calendar-day-view
+              *ngSwitchCase="CalendarView.Day"
+              [viewDate]="viewDate"
+              [events]="events"
+              [refresh]="refresh"
+              [hourSegmentTemplate]="customTimeLabelTemplate"
+              (eventClicked)="handleEvent('Clicked', $event.event)"
+              (eventTimesChanged)="eventTimesChanged($event)"
+            >
+            </mwl-calendar-day-view>
           </div>
         </mat-sidenav-content>
       </mat-sidenav-container>
