--- a/src/app/calendar-room/room-member-list/room-member-list.component.scss
+++ b/src/app/calendar-room/room-member-list/room-member-list.component.scss
@@ -26,8 +26,8 @@
 }
 
 .room-member-wrapper {
-  margin-top: 3em;
-  margin-bottom:0.75em;
+  // margin-top: 3em;
+  // margin-bottom:0.75em;
 }
 
 .user-img {
