--- a/src/app/calendar-room/room-member-list/room-member-list.component.html
+++ b/src/app/calendar-room/room-member-list/room-member-list.component.html
@@ -1,6 +1,6 @@
 <div class="room-member-wrapper">
   <mat-accordion class="user-parent">
-    <mat-expansion-panel class="member-expansion-panel">
+    <mat-expansion-panel class="member-expansion-panel" [expanded]="true">
       <mat-expansion-panel-header>
         <mat-panel-title class="member-list-title-wrapper">
           <mat-icon> group </mat-icon>
